# http-servers

./: Backend- performance-ab  backend-perf.md  backend-perf.txt
Bun/: bun.lockb  index.js  indexwithroutes.js  package.json
Elixir/rest_api/: mix.exs  start.sh
Elixir/rest_api/lib/rest_api/: application.ex  router.ex
Elixir/rest_api/test/: rest_api_test.exs
Go/: go.mod
Go/rest_api/: main.go
Node/rest_api/: index.js  package-lock.json  package.json
Rust/http_server/: Cargo.toml
Rust/http_server/html/: index.html
Rust/http_server/src/: main.rs
Rust/may_minihttp/examples/: status.rs
Rust/warp/: Cargo.toml
Rust/warp/src/: main.rs
